--- a/CalculatorTest/CalculatorTest.csproj
+++ b/CalculatorTest/CalculatorTest.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TPUM\Model.csproj" />
+    <ProjectReference Include="..\Model\Model.csproj" />
   </ItemGroup>
 
 </Project>
