Throwing convert exception, work in progress

--- a/Generator/Generator.csproj
+++ b/Generator/Generator.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\LogicServer\LogicServer.csproj" />
+    <ProjectReference Include="..\PresentationServer\PresentationServer.csproj" />
   </ItemGroup>
 
 </Project>
